desafio css dia 1

--- a/dia_1/index.html
+++ b/dia_1/index.html
@@ -13,5 +13,11 @@
         <span class="hamburguer" />
       </div>
     </label>
+
+    <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
   </body>
 </html>
